# test-ransomware

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: Build.yml
pysrc/ransomware/: exceptions.py  main.py  rlib.pyi
pysrc/ransomware/core/: runtime.py  supervisor.py
pysrc/ransomware/utils/: arguments.py  ende.py  helptext.py
src/: lib.rs  scan.rs
