[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "test-ransomware"
version = "0.1"
description = "Ransomware for Testing purpose"
dependencies = ["maturin"]

[tool.maturin]
python-source = "pysrc"
module-name = "ransomware.rlib"

[project.urls]
GitHub = "https://github.com/d33p0st/looger"